--- a/css/main.css
+++ b/css/main.css
@@ -797,7 +797,22 @@ header {
   fill: #2196f3;
 }
 
-.label-checkbox {
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 9px;
+  border: 2px solid #2a2a2a;
+  border-radius: 2px;
+}
+
+.checkbox-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -807,16 +822,7 @@ header {
   margin-left: 52px;
 }
 
-.icon-checkbox {
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  margin-right: 9px;
-  border: 2px solid #2a2a2a;
-  border-radius: 2px;
-}
-
-.checkbox:checked + .icon-checkbox {
+.checkbox:checked + .checkbox-icon {
   border-color: #2196f3;
   background-color: #2196f3;
   background-image: url(/img/galka.svg);
@@ -824,12 +830,6 @@ header {
   background-origin: border-box;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
 }
 
 .contract {
